fixed the hr that was too short

--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,8 @@ footer {
 }
 
 hr {
-    border: 1px solid white;
-    max-width: 960px;
-    margin: 30px auto;    
+    border: 1px solid white;    
+    margin: 30px 0;    
 }
 
 #fifth {
